Fix nprogress on dark mode

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,9 +16,9 @@
 }
 
 .dark #nprogress .bar {
-    background: theme('colors.yellow.400') !important;
+    background: theme('colors.fuchsia.400') !important;
 }
 
 .dark #nprogress .peg {
-    box-shadow: 0 0 10px theme('colors.yellow.400'), 0 0 5px theme('colors.yellow.400');
+    box-shadow: 0 0 10px theme('colors.fuchsia.400'), 0 0 5px theme('colors.fuchsia.400');
 }
